# keylime

./: .auditing-0  .bump2version.cfg  .git-blame-ignore-revs  .gitignore  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yml  .releaserc.yml  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DESCRIPTION.md  GOVERNANCE.md  LICENSE  MAINTAINERS  MAINTAINERS.md  MANIFEST.in  MONITOR_DOCUMENTATION.md  MONITOR_README.md  Makefile  NVChip  New_framework_exp.md  README.md  RELEASE.md  ROADMAP.md  SWTPM_80_ATTESTATION_FIX.md  TESTING.md  _pypi-notice.md  agent_non_root_condition.sh  codecov.yml  docker-compose.yml  final_monitor.sh  installer.sh  keylime.conf  keylime_monitor.sh  monitor.sh  mypy.ini  packit-ci.fmf  (+14 more)
.ci/: run_local.sh  test_wrapper.sh  test_wrapper_gha.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml  frizbee.yml  stale.yml
Keylime Info/: KEYLIME_ACCURACY_VERIFICATION_REPORT.md  KEYLIME_ARCHITECTURE_DIAGRAMS.md  KEYLIME_ATTACK_SURFACE_ANALYSIS.md  KEYLIME_ATTACK_VECTORS.md  KEYLIME_DETAILED_WALKTHROUGH.md  KEYLIME_DOCKER_DEPLOYMENT_ANALYSIS.md  KEYLIME_DOCUMENTATION_INDEX.md  KEYLIME_SEQUENCE_DIAGRAMS.md  KEYLIME_SEQUENCE_DIAGRAMS_v2.md  KEYLIME_TPM_ATTACK_TREES.md  KEYLIME_VISUAL_SUMMARY.md
archive/: .gitignore  README.md  gen_test_files.sh  moc01.bu.edu-pubek.pem  script_check_quote.py  script_check_quote_raw.py  script_create_quote.py  script_old_quote.py  script_vtpm_register.sh
config-override/: registrar.conf  tenant.conf
demo/: README.md  autorun.sh  demo_setup.sh  ima-policy  mount.sh
doc/: cloud-agent-tarball-notes.md  cloud-node-tarball-notes.md  freebsd.md  keylime RESTful API.docx  keylime-elevator-slides.pptx  llsrc-keylime-acsac-v4.pptx  llsrc-keylime-acsac-v5.pptx  mac-development-setup.md  stub-tpm-notes.md  xen-vtpm-notes.md
docker/: Dockerfile  Dockerfile-tpm12  Dockerfile-tpm20  Dockerfile-ubuntu-tpm20
docs/: .readthedocs.yml  README.md  certificate_authority.rst  conf.py  design.rst  developers.rst  index.rst  installation.rst  publications.bib  publications.rst  requirements.txt  rest_apis.rst  security.rst  setup.cfg  user_guide.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/design/: overview.rst  push_model.rst  security.rst  threat_model.rst
docs/developers/: config_update.rst  contributing.rst
docs/man/: keylime-policy.1.rst  keylime_agent.1.rst  keylime_agent.8.rst  keylime_push_model_agent.8.rst  keylime_registrar.1.rst  keylime_registrar.8.rst  keylime_tenant.1.rst  keylime_verifier.1.rst  keylime_verifier.8.rst
docs/old/: cloud-agent-tarball-notes.md  freebsd.md  keylime RESTful API.docx  keylime-detailed-architecture-v7.pptx  keylime-elevator-slides.pptx  llsrc-keylime-acsac-v6.pptx
docs/rest_apis/2_1/: 2_1.rst  agent.rst  registrar.rst  verifier.rst
docs/rest_apis/2_2/: 2_2.rst  agent.rst  registrar.rst  verifier.rst
docs/rest_apis/2_3/: 2_3.rst  agent.rst  registrar.rst  verifier.rst
docs/rest_apis/2_4/: 2_4.rst  agent.rst  registrar.rst  verifier.rst
docs/rest_apis/2_5/: 2_5.rst  agent.rst  registrar.rst  verifier.rst
docs/rest_apis/3_0/: 3_0.rst  registrar.rst  verifier.rst
docs/user_guide/: authentication.rst  configuration.rst  encrypted_payload.rst  idevid_and_iak.rst  keylime_policy.rst  push_model.rst  revocation.rst  runtime_ima.rst  secure_payload.rst  secure_payloads.rst  trusted_boot.rst  use_measured_boot.rst  user_selected_pcr_monitoring.rst
ima_stub_service/: README.md  ima_emulator.service  installer.sh  tpm2-abrmd-emulator.conf  tpm_emulator.service  tpm_emulator_rm.service  tpm_with_ima.sh
keylime/: .gitignore  NVChip  _cLime.c  agent_util.py  agentstates.py  allowlistdbproxy.py  api_version.py  attestationstatus.py  backport_dataclasses.py  ca_impl_cfssl.py  ca_impl_openssl.py  ca_util.py  cert_utils.py  certificate_wrapper.py  cloud_agent.py  cloud_node.py  cloud_verifier_common.py  cloud_verifier_tornado.py  cmd_exec.py  cmw_evidence.py  cn_installer.spec  cn_installer_2.spec  common.py  config.py  create_whitelist.sh  crypto.py  crypto2.py  cryptodome.py  cv_data.sqlite  decode_cmw.py  dev-clean.sh  enrich.py  failure.py  fs_util.py  gpg.py  httpclient_requests.py  ima.py  ima_ast.py  ima_emulator_adapter.py  ima_file_signatures.py  (+58 more)
patches/: cfsslconf-patch.txt  opensslconf-patch.txt  tpm4720-patch.txt  trustedgrub-patch.txt  xen-vtpmmgr-patch.txt
requirements/: pip.txt
scripts/: check_codestyle.sh  convert_config.py  create_allowlist.sh  create_mb_refstate  create_policy  create_runtime_policy.sh  create_whitelist.sh  dev-clean.sh  download_packit_coverage.sh  ek-openssl-verify  gen_test_files.sh  init_tpm_server  keylime_oneshot_attestation  llsrc-vtpm-host0_pubek.pem  make_agent_bundle.sh  make_agent_bundle_tarball.sh  moc-new.bu.edu-pubek.pem  script_check_quote.py  script_check_quote_raw.py  script_create_quote.py  script_old_quote.py  script_vtpm_register.sh  test_check_quote.py  test_old_quote.py  tpm_serverd  vtpm.sh  vtpm_testing_setup.sh
services/: installer.sh  keylime-tmpfiles.conf  keylime_agent.service  keylime_agent.service.example  keylime_agent.service.template  keylime_agent_secure.mount  keylime_registrar.service  keylime_registrar.service.example  keylime_registrar.service.template  keylime_verifier.service  keylime_verifier.service.example  keylime_verifier.service.template
test/: .pylintrc  conftest.py  oldtest.py  run_tests.sh  test-requirements.txt  test_agents_controller.py  test_agentstates.py  test_algorithms.py  test_api_error.py  test_api_message_body.py  test_api_messages.py  test_api_messages.py.circular_import_issue  test_api_resource.py  test_api_version.py  test_associations.py  test_attestation_controller.py  test_attestation_controller.py.circular_import_issue  test_attestation_model.py  test_auth_session.py  test_authorization.py  test_authorization_integration.py  test_binary.py  test_ca_impl_cfssl.py  (+63 more)
test-data/: emulator-inputs.txt
(+508 files in other folders)
