[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "jinja2",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.pyright]
include = ["keylime"]
ignore = [
    "keylime/backport_dataclasses.py",
    "keylime/keylime_agent.py",
    "keylime/elchecking/",
    "keylime/migrations/versions/",
    "keylime/test/",
    "keylime/da/examples/tsa_rfc3161.py",
    "keylime/da/examples/sqldb.py",
    "keylime/da/examples/redis.py",
    "keylime/da/examples/file.py",
    "keylime/da/record.py",
    "keylime/cmd/ima_emulator_adapter.py",
    "keylime/cmd/convert_ima_policy.py",
    "keylime/cli/policies.py",
    "keylime/ima/file_signatures.py",
    "keylime/ima/ima_test.py",
    "keylime/ima/ima_dm.py",
    "keylime/ima/ima.py",
    "keylime/revocation_actions/update_crl.py",
    "keylime/revocation_notifier.py",
    "keylime/registrar_common.py",
    "keylime/json.py",
    "keylime/cloud_verifier_tornado.py",
]
reportMissingImports = false
