[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "jinja2",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.pyright]
include = ["keylime", "test"]
ignore = [
    "keylime/backport_dataclasses.py",
    "keylime/keylime_agent.py",
    "keylime/elchecking/",
    "keylime/migrations/versions/",
    "keylime/da/examples/tsa_rfc3161.py",
    "keylime/da/examples/sqldb.py",
    "keylime/da/examples/redis.py",
    "keylime/da/examples/file.py",
    "keylime/da/record.py",
    "keylime/cloud_verifier_tornado.py",
    "test/oldtest.py",
    "test/test_ca_impl_openssl.py",
    "test/test_ca_util.py",
    "test/test_cert_utils.py",
    "test/test_ima_dm.py",
    "test/test_ima_verification.py",
    "test/test_restful.py",
    "test/test_tpm.py",
    "test/test_validators.py",
]
reportMissingImports = false
