[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "jinja2",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = 'test/data/template-invalid-adjust/2.0/adjust.py'

[tool.isort]
profile = "black"
line_length = 120

[tool.pyright]
include = ["keylime", "test"]
ignore = [
    "keylime/backport_dataclasses.py",
    "keylime/mba/elchecking/example.py",
    "keylime/migrations/versions/",
    "keylime/da/examples/sqldb.py",
    "keylime/da/examples/redis.py",
    "keylime/da/examples/file.py",
    "test/data/template-invalid-adjust/2.0/adjust.py",
]
reportMissingImports = false
