[metadata]
name = keylime
summary =
    TPM-based key bootstrapping and system integrity measurement system for cloud
description-file =
    README.md
author = Keylime Community
author-email = keylime@groups.io
home-page = https://keylime.dev
python-requires = >=3.6
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD-2-Clause
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Hardware

[files]
packages =
    keylime

[entry_points]
console_scripts =
    keylime_verifier = keylime.cmd.verifier:main
    keylime_agent = keylime.cmd.agent:main
    keylime_tenant = keylime.cmd.tenant:main
    keylime_userdata_encrypt = keylime.cmd.user_data_encrypt:main
    keylime_registrar = keylime.cmd.registrar:main
    keylime_provider_registrar = keylime.cmd.provider_registrar:main
    keylime_provider_platform_init = keylime.cmd.provider_platform_init:main
    keylime_provider_vtpm_add = keylime.cmd.provider_vtpm_add:main
    keylime_ca = keylime.cmd.ca:main
    keylime_ima_emulator = keylime.cmd.ima_emulator_adapter:main
    keylime_webapp = keylime.cmd.webapp:main
