[metadata]
name = keylime
version = 6.3.1
description = TPM-based key bootstrapping and system integrity measurement system for cloud
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://keylime.dev
author = Keylime Community
author_email = keylime@groups.io
license = Apache-2.0
license_file = LICENSE
readme = README.md
project_urls =
        Source = https://github.com/keylime/keylime
        Documentation = https://keylime-docs.readthedocs.io/en/latest/

classifiers =
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python
        Programming Language :: Python :: Implementation :: CPython
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Topic :: System :: Hardware
keywords = iot, security, cloud, edge, tpm, ima, attestation, virtualization

[options]
zip_safe = False
python_requires = >=3.6
packages = find:

[options.packages.find]
exclude = test, test.*

[options.package_data]
keylime =  migrations/alembic.ini, keylime.conf

[options.entry_points]
console_scripts =
        keylime_verifier = keylime.cmd.verifier:main
        keylime_agent = keylime.cmd.agent:main
        keylime_tenant = keylime.cmd.tenant:main
        keylime_userdata_encrypt = keylime.cmd.user_data_encrypt:main
        keylime_registrar = keylime.cmd.registrar:main
        keylime_ca = keylime.cmd.ca:main
        keylime_ima_emulator = keylime.cmd.ima_emulator_adapter:main
        keylime_webapp = keylime.cmd.webapp:main
        keylime_migrations_apply = keylime.cmd.migrations_apply:main
