[metadata]
name = keylime
version = 7.10.0
description = TPM-based key bootstrapping and system integrity measurement system for cloud
long_description= file: _pypi-notice.md, README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://keylime.dev
author = Keylime Community
author_email = keylime@groups.io
license = Apache-2.0
license_files = LICENSE
readme = README.md
project_urls =
        Source = https://github.com/keylime/keylime
        Documentation = https://keylime.readthedocs.io/en/latest/

classifiers =
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python
        Programming Language :: Python :: Implementation :: CPython
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Topic :: System :: Hardware
keywords = iot, security, cloud, edge, tpm, ima, attestation, virtualization

[options]
zip_safe = False
python_requires = >=3.6
packages = find:

[options.packages.find]
exclude = test, test.*

[options.package_data]
keylime =  migrations/alembic.ini, config/*.conf, templates/*

[options.entry_points]
console_scripts =
        keylime_verifier = keylime.cmd.verifier:main
        keylime_tenant = keylime.cmd.tenant:main
        keylime_userdata_encrypt = keylime.cmd.user_data_encrypt:main
        keylime_registrar = keylime.cmd.registrar:main
        keylime_ca = keylime.cmd.ca:main
        keylime_attest = keylime.cmd.attest:main
        keylime_convert_runtime_policy = keylime.cmd.convert_runtime_policy:main
        keylime_sign_runtime_policy = keylime.cmd.sign_runtime_policy:main
        keylime_upgrade_config = keylime.cmd.convert_config:main
	keylime_create_policy = keylime.cmd.create_policy:main
