[metadata]
name = keylime-docs
version = 1.0.0
license = MIT
description = Keylime Documentation
author = Keylime Developers
author_email = keylime@groups.io
url = http://keylime.github.io
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = keylime
github_repo = keylime
